# braziltax

./: .gitignore  README.md  events.toml  main.py  pyproject.toml
parsers/: b3_report.py  events.py  negociacao.py
reports/: readme.md
tax/: calculator.py
